--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 				   			<div class="col-md-6 col-md-offset-3 col-md-push-3 slider-text">
 				   				<div class="slider-text-inner">
 				   					<h1>Human-centric Lighting</h1>
-										<h2>Enhance the Guest experience. Sleep well and wake-up feeling good.</h2>
+										<h2>Enhance the Guest experience. Sleep well and wake-up feeling rested.</h2>
 										<!-- Remove -->
 										<!-- Remove
 										<p><a class="btn btn-primary btn-demo" href="#"></i> View Demo</a> <a class="btn btn-primary btn-learn">Learn More</a></p>
@@ -438,15 +438,15 @@ LuxBalance provides people-centric lighting solutions with a diversity of natura
 							<span class="fh5co-counter-label">Intellectual property rights</span>
 						</div>
 						<div class="col-md-3 text-center">
-							<span class="fh5co-counter js-counter" data-from="0" data-to="4" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="fh5co-counter js-counter" data-from="0" data-to="13" data-speed="5000" data-refresh-interval="50"></span>
 							<span class="fh5co-counter-label">Proprietary Lighting algorithms</span>
 						</div>
 						<div class="col-md-3 text-center">
-							<span class="fh5co-counter js-counter" data-from="0" data-to="512" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="fh5co-counter js-counter" data-from="0" data-to="262144" data-speed="5000" data-refresh-interval="50"></span>
 							<span class="fh5co-counter-label">Control steps</span>
 						</div>
 						<div class="col-md-3 text-center">
-							<span class="fh5co-counter js-counter" data-from="0" data-to="8687" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="fh5co-counter js-counter" data-from="0" data-to="8686" data-speed="5000" data-refresh-interval="50"></span>
 							<span class="fh5co-counter-label">Illuminated lives</span>
 						</div>
 					</div>
@@ -575,7 +575,11 @@ Prior to this he worked as innovation manager in a corporate research lab. He de
 			<div class="row">
 				<div class="col-md-3 fh5co-widget">
 					<h4>About LuxBalance Lighting</h4>
-					<p>Bringing Light to Life. <br>A start-up in human-centric lighting, tissue-culture lighting, animal-centric lighting.</p>
+					<p>Bringing Light to Life.
+						<br> • Helping people to sleep well and wake-up feeling rested.
+						<br> • Helping growers to grow smarter, faster and more sustainable.
+						<br> • Helping farmers to enhance animal wellbeing and farming outcomes.
+						<br> • Empowering creativity with architectural lighting solutions.</p>
 				</div>
 				<div class="col-md-3 col-md-push-1">
 					<h4>Links</h4>
@@ -590,12 +594,12 @@ Prior to this he worked as innovation manager in a corporate research lab. He de
 				<div class="col-md-3 col-md-push-1">
 					<h4>Our Brands</h4>
 					<ul class="fh5co-footer-links">
-						<li><a href="http://iflextube.com/" target="_blank">iFLEXTUBE</a></li>
-						<li><a href="http://HortiPower.com/" target="_blank">HortiPower</a></li>
-						<li><a href="http://LuxBalance.com/" target="_blank">LuxBalance</a></li>
-						<li><a href="http://SunPerform.com/" target="_blank">SunPerform</a></li>
-						<li><a href="http://LuxBalance.com/" target="_blank">RoomYOU</a></li>
-						<li><a href="http://DesignIndulgence.com/" target="_blank">Design Indulgence</a></li>
+						<li><a href="http://iflextube.com/" target="_blank"><img src="images/icons/iflextube.svg" width="100" height="17"/></a></li>
+						<li><a href="http://HortiPower.com/" target="_blank"><img src="images/icons/hortipower.svg" width="100" height="17"/></a></li>
+						<li><a href="http://LuxBalancelighting.com/" target="_blank"><img src="images/icons/luxbalance.svg" width="100" height="17"/></a></li>
+						<li><a href="http://SunPerform.com/" target="_blank"><img src="images/icons/sunperform.svg" width="100" height="17"/></a></li>
+						<li><a href="http://LuxBalancelighting.com/" target="_blank"><img src="images/icons/roomyou.svg" width="100" height="17"/></a></li>
+						<li><a href="http://DesignIndulgence.com/" target="_blank"><img src="images/icons/designindulgence.svg" width="100" height="17"/></a></li>
 					</ul>
 				</div>
 
@@ -620,12 +624,12 @@ Prior to this he worked as innovation manager in a corporate research lab. He de
 -->
 					</p>
 					<p>
-						<!-- <ul class="fh5co-social-icons">
+						<ul class="fh5co-social-icons">
 							<li><a href="https://www.instagram.com/luxbalance/"><i class="icon-instagram"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-						</ul> -->
+							<li><a href="https://www.fb.com/luxbalancelighting"><i class="icon-facebook"></i></a></li>
+							<li><a href="https://www.linkedin.com/company/luxbalance"><i class="icon-linkedin"></i></a></li>
+							<li><a href="https://www.twitter.com/luxbalanceLED"><i class="icon-twitter"></i></a></li>
+						</ul>
 					</p>
 				</div>
 			</div>
