--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ In 1984 Banly Cheung co-founded NCW Holdings LTD (known as BOTEX) and grew it in
 
 		<div class="col-md-4">
 			<div class="fh5co-blog animate-box">
-				<a href="#" class="blog-bg" style="background-image: url(images/team/Jille.jpg);"></a>
+				<a href="#" class="blog-bg" style="background-image: url(images/team/Jille.jpeg);"></a>
 				<div class="blog-text">
 					<!-- <span class="posted_on">Feb. 15th 2016</span> -->
 					<h3><a href="#">Jille Kuipers</a></h3>
