added in the media page

--- a/inthemedia.html
+++ b/inthemedia.html
@@ -71,12 +71,21 @@
 			<div class="top-menu">
 				<div class="row">
 					<div class="col-xs-2">
-						<div id="fh5co-logo"><a href="index.html">Neat</a></div>
+<!-- 						<div id="fh5co-logo"><a href="index.html">LuxBalance</a></div>-->
+						<span class="icon">
+							<a href="index.html" target="_blank">
+								<img src="images/icons/LuxBalance_color.svg" width="100" height="100"/>
+								</a>
+						</span>
+
 					</div>
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="work.html">Work</a></li>
+							<li class="active"><a href="inthemedia.html">In the media</a></li>
+							<!-- TEMPORARY REMOVED -->
+							<!--
+
 							<li class="has-dropdown">
 								<a href="blog.html">Blog</a>
 								<ul class="dropdown">
@@ -86,8 +95,14 @@
 									<li><a href="#">API</a></li>
 								</ul>
 							</li>
-							<li class="active"><a href="about.html">About</a></li>
+							-->
+							<!-- TEMPORARY REMOVED -->
+
+							<!-- <li><a href="inthemedia.html">In the Media</a></li> -->
+
+							<!--
 							<li><a href="contact.html">Contact</a></li>
+ 							-->
 						</ul>
 					</div>
 				</div>
@@ -99,14 +114,14 @@
 		<aside id="fh5co-hero">
 			<div class="flexslider">
 				<ul class="slides">
-			   	<li style="background-image: url(images/img_bg_3.jpg);">
+			   	<li style="background-image: url(inthemedia/bg_roomyou2.jpg);">
 			   		<div class="overlay-gradient"></div>
 			   		<div class="container-fluids">
 			   			<div class="row">
 				   			<div class="col-md-6 col-md-offset-3 slider-text slider-text-bg">
 				   				<div class="slider-text-inner text-center">
-				   					<h1>About</h1>
-										<h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
+				   					<h1>In the Media</h1>
+										<!-- <h2>Here you will find our  <a href="http://luxbalancelighting.com/" target="_blank">press releases</a></h2> -->
 				   				</div>
 				   			</div>
 				   		</div>
@@ -118,69 +133,92 @@
 		<div id="fh5co-about">
 			<div class="row animate-box">
 				<div class="col-md-6 col-md-offset-3 text-center heading-section">
-					<h3>Our Future</h3>
-					<p>We are ready.</p>
+					<h3>LuxBalance Lighting is officially incorporated</h3>
+					<p>Happy new year to everyone! Stay tuned for more info. We will update this page on 22nd of January. In the meantime, feel free to explore this page or contact us if any questions or comments.</p>
+					<hr>
+					<h3>Full-range portfolio for professional applications</h3>
+					<p>Our Flexible Linear Lighting solutions are designed for professional projects. This high-end range is designed to deliver enable your creativity, provide superb lighting effect and design flexibility.
+						<br>With advanced manufacturing methods and a team of lighting professionals we strive towards complete satisfaction in all our projects.
+						<br>Contact us for product data-sheets and information.</p>
+
+	<h3>Advanced digital lighting technology</h3>
+	<p>The patented flexible linear lighting feature special spectrum LEDs with precision dimming and lighting algorithms. Blending technological innovation, optical excellence and digital scalability we empower you to shape the creation of light. Our special LightScript chip provides people-centric lighting content that is based on the understanding of people, spaces and light.
+<br>Currently we hold more than 20 Intellectual property rights in China, United States and Europe. </p>
+
+<h3>Spectrum LEDs for each application</h3>
+<p>The one-of-a-kind LEDs combination can also deliver superb natural white and smoothly blend human centric lighting with ambient lighting for a comfortable feeling. Sunrise orange LEDs create warm shades of light, twilight hues and a true-to-nature glow. Human centric spectrum can also enhance architecture and materials in the best possible way and adds special effects in bars and clubs. Lighting can live up to its potential in benefits for human biology, vision and emotion.</p>
+
+<h3>Reliability and speed</h3>
+<p>Co-creation and innovation starts with a conversation. We can co-create for special projects where we research the end-user application, experience-flow and business needs. With a solid understanding of the current state we propose new propositions that enhance experience, create business value and long lasting differentiation enabled with digital light.
+<br> We co-create with end-users, designers, architects, brands and owners.</p>
 				</div>
 			</div>
 
 			<div class="row">
 				<div class="col-md-10 col-md-offset-1 text-center animate-box">
-					<p><img src="images/cover_bg_3.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive"></p>
+					<!-- <p><img src="images/cover_bg_3.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive"></p> -->
 				</div>
 				<div class="col-md-8 col-md-offset-2 text-center animate-box">
 					<div class="about-desc">
-						<h3>Our story</h3>
-						<p>We've been working in the Lighting industry for the past many years.</p>
-						<p>
+						<!-- <h3>Our story</h3>
+						<p>We've been working in the Lighting industry for the past many years.</p> -->
+						<!-- <p>
 							<ul class="fh5co-social-icons">
 								<li><a href="#"><i class="icon-twitter"></i></a></li>
 								<li><a href="#"><i class="icon-facebook"></i></a></li>
 								<li><a href="#"><i class="icon-linkedin"></i></a></li>
 								<li><a href="#"><i class="icon-dribbble"></i></a></li>
 							</ul>
-						</p>
+						</p> -->
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
+
+
 	</div><!-- END container-wrap -->
 
 	<div class="container-wrap">
 		<footer id="fh5co-footer" role="contentinfo">
 			<div class="row">
 				<div class="col-md-3 fh5co-widget">
-					<h4>About Neat</h4>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+					<h4>About LuxBalance Lighting</h4>
+					<p>Bringing Light to Life.
+						<br> • Helping people to sleep well and wake-up feeling rested.
+						<br> • Helping growers to grow smarter, faster and more sustainable.
+						<br> • Helping farmers to enhance animal wellbeing and farming outcomes.
+						<br> • Empowering creativity with architectural lighting solutions.</p>
 				</div>
 				<div class="col-md-3 col-md-push-1">
-					<h4>Latest Posts</h4>
+					<h4>Links</h4>
 					<ul class="fh5co-footer-links">
-						<li><a href="#">Amazing Templates</a></li>
-						<li><a href="#">100+ Free Download Templates</a></li>
-						<li><a href="#">Neat is now available</a></li>
-						<li><a href="#">Download 1000+ icons</a></li>
-						<li><a href="#">Big Deal for this month of March, Join Us here</a></li>
+						<li><a href=files/20190110_LuxBalance_Lighting_Privacy.pdf target="_blank"> Privacy (pdf)</a></li>
+						<li><a href=files/20190110_Terms_and_conditions_for_sale_of_products_and_services_LuxBalance_Lighting.pdf target="_blank"> Terms and Conditions (pdf)</a></li>
+						<li><a href=files/20190110_Warranty_Policy_LuxBalance_Lighting.pdf target="_blank"> Warranty Policy (pdf)</a></li>
+						<li><a href=files/20190110_LuxBalance_Lighting_responsible_disclosure_statement.pdf target="_blank"> Responsible Disclosure (pdf)</a></li>
 					</ul>
 				</div>
 
 				<div class="col-md-3 col-md-push-1">
-					<h4>Links</h4>
+					<h4>Our Brands</h4>
 					<ul class="fh5co-footer-links">
-						<li><a href="#">Home</a></li>
-						<li><a href="#">Work</a></li>
-						<li><a href="#">Services</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">About us</a></li>
+						<li><a href="http://iflextube.com/" target="_blank"><img src="images/icons/iflextube.svg" width="100" height="17"/></a></li>
+						<li><a href="http://HortiPower.com/" target="_blank"><img src="images/icons/hortipower.svg" width="100" height="17"/></a></li>
+						<li><a href="http://LuxBalancelighting.com/" target="_blank"><img src="images/icons/luxbalance.svg" width="100" height="17"/></a></li>
+						<li><a href="http://SunPerform.com/" target="_blank"><img src="images/icons/sunperform.svg" width="100" height="17"/></a></li>
+						<li><a href="http://LuxBalancelighting.com/" target="_blank"><img src="images/icons/roomyou.svg" width="100" height="17"/></a></li>
+						<li><a href="http://DesignIndulgence.com/" target="_blank"><img src="images/icons/designindulgence.svg" width="100" height="17"/></a></li>
 					</ul>
 				</div>
 
 				<div class="col-md-3">
 					<h4>Contact Information</h4>
 					<ul class="fh5co-footer-links">
-						<li>198 West 21th Street, <br> Suite 721 New York NY 10016</li>
-						<li><a href="tel://1234567920">+ 1235 2355 98</a></li>
-						<li><a href="mailto:info@yoursite.com">info@yoursite.com</a></li>
-						<li><a href="http://gettemplates.co">gettemplates.co</a></li>
+						<li>F&H 17F, International Industrial Centre, <br> No 2-8 Kwei Tei Street, Fotan, Shatin, N.T. Hong Kong</li>
+						<li><a href="tel://+85239746318">+852 3974 6318</a></li>
+						<li><a href="mailto:info@luxbalancelighting.com">info@luxbalancelighting.com</a></li>
+						<li><a href="http://www.luxbalancelighting.com">LuxBalanceLighting.com</a></li>
 					</ul>
 				</div>
 
@@ -189,15 +227,17 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small>
+						<small class="block">&copy; 2019 LuxBalance Lighting Limited. All Rights Reserved.</small>
+						<!-- Temporary removed
 						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
+-->
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
+							<li><a href="https://www.instagram.com/luxbalance/"><i class="icon-instagram"></i></a></li>
+							<li><a href="https://www.fb.com/luxbalancelighting"><i class="icon-facebook"></i></a></li>
+							<li><a href="https://www.linkedin.com/company/luxbalance"><i class="icon-linkedin"></i></a></li>
+							<li><a href="https://www.twitter.com/luxbalanceLED"><i class="icon-twitter"></i></a></li>
 						</ul>
 					</p>
 				</div>
