--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 				<div class="row">
 					<div class="col-xs-2">
 <!-- 						<div id="fh5co-logo"><a href="index.html">LuxBalance</a></div>-->
+
 						<span class="icon">
 							<img src="images/icons/LuxBalance_color.svg" width="100" height="100"/>
 						</span>
@@ -80,6 +81,7 @@
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
 							<li class="active"><a href="index.html">Home</a></li>
+							<li><a href="inthemedia.html">In the Media</a></li>
 							<!-- TEMPORARY REMOVED -->
 							<!--
 
@@ -286,9 +288,9 @@ LuxBalance provides people-centric lighting solutions with a diversity of natura
 						<span class="icon">
 							<img src="images/icons/frontdesk.svg" width="50" height="50"/>
 							<img src="images/icons/greenhouse.svg" width="50" height="50"/>
+							<img src="images/icons/roi.svg" width="50" height="50"/>
 							<!-- <img src="images/icons/lovesleep.svg" width="50" height="50"/>
 							<img src="images/icons/moon.svg" width="50" height="50"/>
-							<img src="images/icons/lovesleep.svg" width="50" height="50"/>
 							<img src="images/icons/snooze.svg" width="50" height="50"/>
 							<img src="images/icons/sunrise.svg" width="50" height="50"/>
 							<img src="images/icons/sunset.svg" width="50" height="50"/>
@@ -296,7 +298,7 @@ LuxBalance provides people-centric lighting solutions with a diversity of natura
 							<img src="images/icons/lovesleep.svg" width="50" height="50"/> -->
 						</span>
 						<div class="desc">
-							<h3><a href="#">Space</a></h3>
+							<h3><a href="#">Spaces</a></h3>
 							<p>Lighting application is an important concept in lighting design. The right light for the right space is part of application research. We continously explore how our application spaces are going to look and feel in the future.</p>
 						</div>
 					</div>
@@ -304,6 +306,7 @@ LuxBalance provides people-centric lighting solutions with a diversity of natura
 				<div class="col-md-4 text-center animate-box">
 					<div class="services">
 						<span class="icon">
+							<img src="images/icons/lovesleep.svg" width="50" height="50"/>
 							<img src="images/icons/tissueculture.svg" width="50" height="50"/>
 							<!-- <img src="images/icons/plantprocess.svg" width="50" height="50"/>
 							<img src="images/icons/farm.svg" width="50" height="50"/> -->
@@ -312,6 +315,7 @@ LuxBalance provides people-centric lighting solutions with a diversity of natura
 							<img src="images/icons/broiler.svg" width="50" height="50"/> -->
 							<!-- <img src="images/icons/eggs.svg" width="50" height="50"/> -->
 							<img src="images/icons/eggshelf.svg" width="50" height="50"/>
+
 							<!-- <img src="images/icons/flicker.svg" width="50" height="50"/> -->
 
 						</span>
@@ -342,7 +346,6 @@ LuxBalance provides people-centric lighting solutions with a diversity of natura
 							<img src="images/icons/mixing.svg" width="50" height="50"/>
 							<img src="images/icons/programs.svg" width="50" height="50"/>
 							<!-- <img src="images/icons/pwm.svg" width="50" height="50"/> -->
-							<img src="images/icons/roi.svg" width="50" height="50"/>
 							<img src="images/icons/spectrum.svg" width="50" height="50"/>
 
 
