--- a/index.html
+++ b/index.html
@@ -597,12 +597,12 @@ Prior to this he worked as innovation manager in a corporate research lab. He de
 				<div class="col-md-3 col-md-push-1">
 					<h4>Our Brands</h4>
 					<ul class="fh5co-footer-links">
-						<li><a href="http://iflextube.com/" target="_blank"><img src="images/icons/iflextube.svg" width="100" height="17"/></a></li>
-						<li><a href="http://HortiPower.com/" target="_blank"><img src="images/icons/hortipower.svg" width="100" height="17"/></a></li>
+						<li><a href="http://LuxBalancelighting.com/" target="_blank"><img src="images/icons/iflextube.svg" width="100" height="17"/></a></li>
+						<li><a href="http://LuxBalancelighting.com/" target="_blank"><img src="images/icons/hortipower.svg" width="100" height="17"/></a></li>
 						<li><a href="http://LuxBalancelighting.com/" target="_blank"><img src="images/icons/luxbalance.svg" width="100" height="17"/></a></li>
-						<li><a href="http://SunPerform.com/" target="_blank"><img src="images/icons/sunperform.svg" width="100" height="17"/></a></li>
+						<li><a href="http://LuxBalancelighting.com/" target="_blank"><img src="images/icons/sunperform.svg" width="100" height="17"/></a></li>
 						<li><a href="http://LuxBalancelighting.com/" target="_blank"><img src="images/icons/roomyou.svg" width="100" height="17"/></a></li>
-						<li><a href="http://DesignIndulgence.com/" target="_blank"><img src="images/icons/designindulgence.svg" width="100" height="17"/></a></li>
+						<li><a href="http://LuxBalancelighting.com/" target="_blank"><img src="images/icons/designindulgence.svg" width="100" height="17"/></a></li>
 					</ul>
 				</div>
 
@@ -612,7 +612,7 @@ Prior to this he worked as innovation manager in a corporate research lab. He de
 						<li>F&H 17F, International Industrial Centre, <br> No 2-8 Kwei Tei Street, Fotan, Shatin, N.T. Hong Kong</li>
 						<li><a href="tel://+85239746318">+852 3974 6318</a></li>
 						<li><a href="mailto:info@luxbalancelighting.com">info@luxbalancelighting.com</a></li>
-						<li><a href="http://www.luxbalancelighting.com">LuxBalanceLighting.com</a></li>
+						<li><a href="http://www.LuxBalancelighting.com">LuxBalanceLighting.com</a></li>
 					</ul>
 				</div>
 
