--- a/inthemedia.html
+++ b/inthemedia.html
@@ -135,6 +135,7 @@
 				<div class="col-md-6 col-md-offset-3 text-center heading-section">
 					<h3>LuxBalance Lighting is officially incorporated</h3>
 					<p>Happy new year to everyone! Stay tuned for more info. We will update this page on 22nd of January. In the meantime, feel free to explore this page or contact us if any questions or comments.</p>
+<em>updated on 10th of January 2019</em>
 					<hr>
 					<h3>Full-range portfolio for professional applications</h3>
 					<p>Our Flexible Linear Lighting solutions are designed for professional projects. This high-end range is designed to deliver enable your creativity, provide superb lighting effect and design flexibility.
@@ -203,12 +204,12 @@
 				<div class="col-md-3 col-md-push-1">
 					<h4>Our Brands</h4>
 					<ul class="fh5co-footer-links">
-						<li><a href="http://iflextube.com/" target="_blank"><img src="images/icons/iflextube.svg" width="100" height="17"/></a></li>
-						<li><a href="http://HortiPower.com/" target="_blank"><img src="images/icons/hortipower.svg" width="100" height="17"/></a></li>
+						<li><a href="http://LuxBalancelighting.com/" target="_blank"><img src="images/icons/iflextube.svg" width="100" height="17"/></a></li>
+						<li><a href="http://LuxBalancelighting.com/" target="_blank"><img src="images/icons/hortipower.svg" width="100" height="17"/></a></li>
 						<li><a href="http://LuxBalancelighting.com/" target="_blank"><img src="images/icons/luxbalance.svg" width="100" height="17"/></a></li>
-						<li><a href="http://SunPerform.com/" target="_blank"><img src="images/icons/sunperform.svg" width="100" height="17"/></a></li>
+						<li><a href="http://LuxBalancelighting.com/" target="_blank"><img src="images/icons/sunperform.svg" width="100" height="17"/></a></li>
 						<li><a href="http://LuxBalancelighting.com/" target="_blank"><img src="images/icons/roomyou.svg" width="100" height="17"/></a></li>
-						<li><a href="http://DesignIndulgence.com/" target="_blank"><img src="images/icons/designindulgence.svg" width="100" height="17"/></a></li>
+						<li><a href="http://LuxBalancelighting.com/" target="_blank"><img src="images/icons/designindulgence.svg" width="100" height="17"/></a></li>
 					</ul>
 				</div>
 
