--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ LuxBalance provides people-centric lighting solutions with a diversity of natura
 						<div class="row">
 							<div class="col-md-10 col-md-offset-1 slider-text slider-text-bg">
 								<div class="slider-text-inner text-center">
-									<h1>RoomYOU | Personalized moments</h1>
+									<h1>RoomYOU | Feeling Rested </h1>
 									<h2>Lighting for sleep and wake-cycles to balance your circadian rhythm</h2>
 								</div>
 							</div>
@@ -299,7 +299,7 @@ LuxBalance provides people-centric lighting solutions with a diversity of natura
 						</span>
 						<div class="desc">
 							<h3><a href="#">Spaces</a></h3>
-							<p>Lighting application is an important concept in lighting design. The right light for the right space is part of application research. We continously explore how our application spaces are going to look and feel in the future.</p>
+							<p>Space is an important concept in lighting design. The right light for the right space is part of application research. We continously explore how our application spaces are going to look and feel in the future.</p>
 						</div>
 					</div>
 				</div>
@@ -321,7 +321,7 @@ LuxBalance provides people-centric lighting solutions with a diversity of natura
 						</span>
 						<div class="desc">
 							<h3><a href="#">People, Plants, Animals</a></h3>
-							<p>People, Plants and Animals all perceive light differently. We continously research how lighting should be optimized in order to impact life.</p>
+							<p>People, Plants and Animals perceive light differently. We continously research how lighting should be optimized in order to positively impact life.</p>
 						</div>
 					</div>
 				</div>
@@ -466,7 +466,7 @@ LuxBalance provides people-centric lighting solutions with a diversity of natura
 				<div class="blog-text">
 					<!-- <span class="posted_on">Feb. 15th 2016</span> -->
 					<h3><a href="#">Banly Cheung</a></h3>
-					<p>Banly Cheung started Design Indulgence and drives strategy, sales and technology. He is a lighting enthusiast and visionary.
+					<p>Banly Cheung started LuxBalance Lighting and drives strategy, sales and technology. He is a lighting enthusiast and visionary.
 
 ​
 
@@ -489,7 +489,7 @@ In 1984 Banly Cheung co-founded NCW Holdings LTD (known as BOTEX) and grew it in
 				<div class="blog-text">
 					<!-- <span class="posted_on">Feb. 15th 2016</span> -->
 					<h3><a href="#">Jille Kuipers</a></h3>
-					<p>Jille Kuipers leads research, market-driven innovation and marketing at Design Indulgence. He is focused on creating value with light. <br>
+					<p>Jille Kuipers leads research, market-driven innovation and marketing at LuxBalance Lighting. He is focused on creating value with light. <br>
 
 ​
 
@@ -511,7 +511,7 @@ Prior to this he worked as innovation manager in a corporate research lab. He de
 				<div class="blog-text">
 					<!-- <span class="posted_on">Feb. 15th 2016</span> -->
 					<h3><a href="#">Jupiter Lee</a></h3>
-					<p>Jupiter Lee is an essential part of the team, and has been with Design Indulgence Limited since the very beginning. <br><br><br>She is responsible for sales administration and HR. Prior to this she worked in NCW (Holdings) Ltd. for over 10 years and two Component companies for over 7 years.</p>
+					<p>Jupiter Lee is an essential part of the team, and has been with LuxBalance Lighting Limited since the very beginning. <br><br><br>She is responsible for sales administration and HR. Prior to this she worked in NCW (Holdings) Ltd. for over 10 years and two Component companies for over 7 years.</p>
 					<!-- Remove
 					<ul class="stuff">
 						<li><i class="icon-heart3"></i>249</li>
