--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-71079687-3"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-71079687-3');
+	</script>
 
 	</head>
 	<body>
@@ -221,6 +230,7 @@ LuxBalance provides people-centric lighting solutions with a diversity of natura
 								<div class="slider-text-inner text-center">
 									<h1>iFLEXTUBE | Design for flexibility</h1>
 									<h2>Professional Flexible LED Linear solutions for architectural applications.</h2>
+										<p><a <a class="btn btn-primary btn-learn" href="mailto:banly@luxbalancelighting.com?subject=iFlextube datasheet">Request datasheet</a></p>
 								</div>
 							</div>
 						</div>
@@ -238,6 +248,7 @@ LuxBalance provides people-centric lighting solutions with a diversity of natura
 								<div class="slider-text-inner text-center">
 									<h1>HortiPower | Bringing Nature Inside</h1>
 									<h2>People and plants perceive light differently. Plants have a broad sensitivity for photosynthesis and in some cases a preference for blue and red light. Light could stimulate specific plant processes and morphology. Our latest innovation project is focused on creating better outcomes with lighting for tissue culture labs.  </h2>
+									<p><a <a class="btn btn-primary btn-learn" href="mailto:banly@luxbalancelighting.com?subject=HortiPower">Potential project? Contact us</a></p>
 								</div>
 							</div>
 						</div>
@@ -255,6 +266,7 @@ LuxBalance provides people-centric lighting solutions with a diversity of natura
 								<div class="slider-text-inner text-center">
 									<h1>SunPerform | Bringing Nature Inside</h1>
 									<h2>Light plays important role in Chicken growth and its physical, social and emotional well-being. We bring nature inside with dedicated lighting for Broiler and Layer. </h2>
+									<p><a <a class="btn btn-primary btn-learn" href="mailto:banly@luxbalancelighting.com?subject=SunPerform">Potential project? Contact us</a></p>
 								</div>
 							</div>
 						</div>
@@ -272,6 +284,7 @@ LuxBalance provides people-centric lighting solutions with a diversity of natura
 								<div class="slider-text-inner text-center">
 									<h1>RoomYOU | Feeling Rested </h1>
 									<h2>Lighting for sleep and wake-cycles to balance your circadian rhythm</h2>
+									<p><a <a class="btn btn-primary btn-learn" href="mailto:banly@luxbalancelighting.com?subject=RoomYOU">Explore more? Contact us</a></p>
 								</div>
 							</div>
 						</div>
@@ -542,10 +555,10 @@ Prior to this he worked as innovation manager in a corporate research lab. He de
 				</div>
 				<div class="row">
 					<div class="col-md-12 animate-box">
-						<a href="mailto:info@luxbalancelighting.com" class="blog-post">
+						<a href=files/20190110LuxBalance_HortiPower_LaaS.pdf class="blog-post">
 							<span class="img" style="background-image: url(images/blog-2.jpg);"></span>
 							<div class="desc">
-								<h3>5 Reasons for Lighting as a Service</h3>
+								<h3>5 Reasons for Lighting as a Service (Tissue Culture)</h3>
 								<span class="cat">Email us to learn more</span>
 							</div>
 						</a>
