--- a/index.html
+++ b/index.html
@@ -5,33 +5,19 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>LuxBalance | Bring Light to Life</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="freehtml5.co" />
-
-	<!--
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE
-	DESIGNED & DEVELOPED by FreeHTML5.co
-
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
+	<meta name="description" content="LuxBalance | Bring Light to Life" />
+	<meta name="keywords" content="LuxBalance | Bring Light to Life, Human centric lighting, Tissue culture lighting, Animal centric lighting," />
+	<meta name="author" content="LuxBalance Lighting" />
 
   	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
+	<meta property="og:title" content="LuxBalance Lighting | Bring Light to Life"/>
 	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
+	<meta property="og:url" content="http://www.luxbalancelighting.com"/>
 	<meta property="og:site_name" content=""/>
 	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
+	<meta name="twitter:title" content="LuxBalance Lighting | Bring Light to Life" />
 	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
+	<meta name="twitter:url" content="http://www.luxbalancelighting.com" />
 	<meta name="twitter:card" content="" />
 
 	<link href="https://fonts.googleapis.com/css?family=Oxygen:300,400" rel="stylesheet">
@@ -68,7 +54,7 @@
 
 	  gtag('config', 'UA-71079687-3');
 	</script>
-
+	<!-- Global site tag (gtag.js) - Google Analytics -->
 	</head>
 	<body>
 
@@ -635,9 +621,6 @@ Prior to this he worked as innovation manager in a corporate research lab. He de
 				<div class="col-md-12 text-center">
 					<p>
 						<small class="block">&copy; 2019 LuxBalance Lighting Limited. All Rights Reserved.</small>
-						<!-- Temporary removed
-						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
--->
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
