--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ LuxBalance provides people-centric lighting solutions with a diversity of natura
 		<div id="fh5co-counter" class="fh5co-counters">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center animate-box">
-					<p>Technology to serve and grow you.</p>
+					<p>Technology to serve you</p>
 					</div>
 			</div>
 			<div class="row animate-box">
@@ -488,7 +488,7 @@ In 1984 Banly Cheung co-founded NCW Holdings LTD (known as BOTEX) and grew it in
 				<div class="blog-text">
 					<!-- <span class="posted_on">Feb. 15th 2016</span> -->
 					<h3><a href="#">Jille Kuipers</a></h3>
-					<p>Jille Kuipers leads research, market-driven innovation and marketing at LuxBalance Lighting. He is focused on creating value with light. <br>
+					<p>Jille Kuipers leads research and market-driven innovation at LuxBalance Lighting. He is focused on creating value with light. <br>
 
 ​
 
