--- a/inthemedia.html
+++ b/inthemedia.html
@@ -127,9 +127,38 @@
 		</aside>
 		<div id="fh5co-about">
 			<div class="row animate-box">
-				<div class="col-md-6 col-md-offset-3 text-center heading-section">
-					<h3>LuxBalance Lighting is officially incorporated</h3>
-					<p>Happy new year to everyone! Stay tuned for more info. We will update this page on 22nd of January. In the meantime, feel free to explore this page or contact us if any questions or comments.</p>
+				<div class="col-md-6 col-md-offset-3 text-left heading-section">
+					<h3>Introducing LuxBalance™</h3>
+
+					<p><b>Introducing LuxBalanceTM – A new lighting technology collaboration between <a href="http://www.acclaimlighting.com/news/news-detail/article/introducing-luxbalanceTM.html" target="_blank">Acclaim Lighting</a> and LuxBalance Lighting </b></p>
+<p>
+Acclaim Lighting and LuxBalance Lighting are partnering to transform how lighting impacts people’s lives by combining some of the worlds best lighting expertise with advanced research and innovative concepts in digital lighting technology.</p>
+<p> <i>
+“We’re excited to work with Acclaim - a global leader in innovative and advanced lighting technology”</i> said Banly Cheung, LuxBalance Lighting, Lighting visionary and MD. <i>“With our smart combination of full spectrum lighting, control and personalized concepts we can deliver great experiences for people and better business results with light.”</i></p>
+<p>
+	<i>“With this partnership, we’re bringing together our lighting experience and shared passion for lighting innovation’</i> said Toby Velazquez, Acclaim Lighting, CEO. <i>“We have always worked closely with the lighting design community to provide cutting edge solutions and we look forward to exploring more on how to apply this new and relevant lighting technology in the near future.”</i></p>
+	<p>
+Lighting experts, Creatives and end-users alike will be able to take full advantage of these new partnered technologies in digital lighting offering light quality and performance beyond CCT and CRI. The initial focus areas of this partnership include:
+</p>
+<p>
+    <b>Full spectrum natural white:</b> Acclaim and LuxBalance Lighting empower architects and designers to highlight unique appearance of material and finishes in the décor with the widest range of natural white. Using a unique combination of LEDs and smart color calibration, it delivers the most natural and widest natural white following the BBL.
+    <b>Human centric lighting for hospitality:</b> helping people sleep well and wake-up feeling rested with our digital lighting technology.
+<br>
+    <b>Plant centric lighting for Tissue culture:</b> helping tropical fruits using HortiPower, a powerful and flexible spectrum lighting for tissue culture labs and city farms. Flexible lighting enables growers and farmers to grow faster and healthier and tailoring lighting to the unique needs of the plants and growth stage.
+<br>    <b>Animal centric lighting for Broiler and Layer:</b> enhancing animal wellbeing and farming outcomes using SunPerform, a special lighting range for chicken farms. Proprietary lighting algorithms supports bird development and enables a smarter farming approach.
+</p>
+<p>About--
+<br>    Acclaim Lighting – a leader in innovative and advanced lighting technology was founded
+    2003 in Los Angeles, California. <a href="http://www.acclaimlighting.com" target="_blank">www.acclaimlighting.com</a>
+<br>    LuxBalance Lighting – a start-up in end-user digital lighting technology was founded in 2019 in Hong Kong. <a href="http://www.luxbalancelighting.com" target="_blank">www.luxbalancelighting.com</a> </p>
+<em>updated on 11th of January 2019</em>
+					<hr>
+					<h3>LuxBalance Lighting joins HSH Kaleidoscope Lab Pitch Night Finalists</h3>
+					<p>More info <a href="https://www.hshgroup.com/en/about/kaleidoscope-lab" target="_blank">here</a> </p>
+<em>updated on 11th of January 2019</em>
+					<hr>
+					<h3>LuxBalance Lighting is officially registered</h3>
+					<p>Happy new year to everyone! Stay tuned for more info. In the meantime, feel free to explore this page or contact us if any questions or comments.</p>
 <em>updated on 10th of January 2019</em>
 					<hr>
 					<h3>Full-range portfolio for professional applications</h3>
