--- a/inthemedia.html
+++ b/inthemedia.html
@@ -142,7 +142,7 @@ Lighting experts, Creatives and end-users alike will be able to take full advant
 </p>
 <p>
     <b>Full spectrum natural white:</b> Acclaim and LuxBalance Lighting empower architects and designers to highlight unique appearance of material and finishes in the décor with the widest range of natural white. Using a unique combination of LEDs and smart color calibration, it delivers the most natural and widest natural white following the BBL.
-    <b>Human centric lighting for hospitality:</b> helping people sleep well and wake-up feeling rested with our digital lighting technology.
+<br>    <b>Human centric lighting for hospitality:</b> helping people sleep well and wake-up feeling rested with our digital lighting technology.
 <br>
     <b>Plant centric lighting for Tissue culture:</b> helping tropical fruits using HortiPower, a powerful and flexible spectrum lighting for tissue culture labs and city farms. Flexible lighting enables growers and farmers to grow faster and healthier and tailoring lighting to the unique needs of the plants and growth stage.
 <br>    <b>Animal centric lighting for Broiler and Layer:</b> enhancing animal wellbeing and farming outcomes using SunPerform, a special lighting range for chicken farms. Proprietary lighting algorithms supports bird development and enables a smarter farming approach.
