--- a/inthemedia.html
+++ b/inthemedia.html
@@ -68,7 +68,7 @@
 					<div class="col-xs-2">
 <!-- 						<div id="fh5co-logo"><a href="index.html">LuxBalance</a></div>-->
 						<span class="icon">
-							<a href="index.html" target="_blank">
+							<a href="index.html">
 								<img src="images/icons/LuxBalance_color.svg" width="100" height="100"/>
 								</a>
 						</span>
