--- a/inthemedia.html
+++ b/inthemedia.html
@@ -55,6 +55,7 @@
 	  gtag('config', 'UA-71079687-3');
 	</script>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
 	</head>
 	<body>
 
