press release pdf

--- a/inthemedia.html
+++ b/inthemedia.html
@@ -152,7 +152,8 @@ Lighting experts, Creatives and end-users alike will be able to take full advant
 <br>    Acclaim Lighting – a leader in innovative and advanced lighting technology was founded
     2003 in Los Angeles, California. <a href="http://www.acclaimlighting.com" target="_blank">www.acclaimlighting.com</a>
 <br>    LuxBalance Lighting – a start-up in end-user digital lighting technology was founded in 2019 in Hong Kong. <a href="http://www.luxbalancelighting.com" target="_blank">www.luxbalancelighting.com</a> </p>
-<em>updated on 11th of January 2019</em>
+<a href=files/LuxBalancecollaborationwithAcclaimLightingandLuxBalanceLighting.pdf target="_blank"> Download the press release here</a>
+<br><em>updated on 11th of January 2019</em>
 					<hr>
 					<h3>LuxBalance Lighting joins HSH Kaleidoscope Lab Pitch Night Finalists</h3>
 					<p>More info <a href="https://www.hshgroup.com/en/about/kaleidoscope-lab" target="_blank">here</a> </p>
