--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 	<meta name="keywords" content="LuxBalance | Bring Light to Life, Human centric lighting, Tissue culture lighting, Animal centric lighting," />
 	<meta name="author" content="LuxBalance Lighting" />
 
+
+	<!-- Favicon -->
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
+	<!-- Favicon -->
+
+
+
+
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content="LuxBalance Lighting | Bring Light to Life"/>
 	<meta property="og:image" content=""/>
@@ -55,7 +69,7 @@
 	  gtag('config', 'UA-71079687-3');
 	</script>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
+	<!-- <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' /> -->
 	</head>
 	<body>
 
