--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ LuxBalance provides people-centric lighting solutions with a diversity of natura
 						<div class="row">
 							<div class="col-md-10 col-md-offset-1 slider-text slider-text-bg">
 								<div class="slider-text-inner text-center">
-									<h1>HortiPower | Bringing Nature Inside</h1>
+									<h1>HortiPower | Grow with Nature</h1>
 									<h2>People and plants perceive light differently. Plants have a broad sensitivity for photosynthesis and in some cases a preference for blue and red light. Light could stimulate specific plant processes and morphology. Our latest innovation project is focused on creating better outcomes with lighting for tissue culture labs.  </h2>
 									<p><a <a class="btn btn-primary btn-learn" href="mailto:banly@luxbalancelighting.com?subject=HortiPower">Potential project? Contact us</a></p>
 								</div>
@@ -265,7 +265,7 @@ LuxBalance provides people-centric lighting solutions with a diversity of natura
 						<div class="row">
 							<div class="col-md-10 col-md-offset-1 slider-text slider-text-bg">
 								<div class="slider-text-inner text-center">
-									<h1>SunPerform | Bringing Nature Inside</h1>
+									<h1>SunPerform | Wellbeing for animal-life</h1>
 									<h2>Light plays important role in Chicken growth and its physical, social and emotional well-being. We bring nature inside with dedicated lighting for Broiler and Layer. </h2>
 									<p><a <a class="btn btn-primary btn-learn" href="mailto:banly@luxbalancelighting.com?subject=SunPerform">Potential project? Contact us</a></p>
 								</div>
