--- a/inthemedia.html
+++ b/inthemedia.html
@@ -94,8 +94,8 @@
 <div class="row">
 		  <div class="col-md-8 col-md-offset-2">
 				<hr />
-				<p>This page will be updated in a later stage.</p>
-<p>January 2018</p>
+				<p>This page has not been updated in a while. It will be updated soon</p>
+<p>January 2019</p>
 				<hr />
 				<p><a href="https://getsupersocial.com/"target="_blank">Good Morning Labs</a> launched a contact journal app to help you stay in touch. It is now available for free on all iOS devices.</p>
 				<p>Download it <a href="https://itunes.apple.com/us/app/super-social/id1186696582"target="_blank">here.</a></p>
