--- a/inthemedia.html
+++ b/inthemedia.html
@@ -97,7 +97,7 @@
 				<p>This page has not been updated in a while. It will be updated soon</p>
 <p>January 2019</p>
 				<hr />
-				<p><a href="https://getsupersocial.com/"target="_blank">Good Morning Labs</a> launched a contact journal app to help you stay in touch. It is now available for free on all iOS devices.</p>
+				<p><a href="https://socialcontactjournal.com/"target="_blank">Good Morning Labs</a> launched a contact journal app to help you stay in touch. It is now available for free on all iOS devices.</p>
 				<p>Download it <a href="https://itunes.apple.com/us/app/super-social/id1186696582"target="_blank">here.</a></p>
 <p>April 2017</p>
 				<hr />
