--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 					</div>
 					<div class="desc animate-box">
 						<span></span>
-							<p>Hello, welcome to my portfolio.<br>I am a marketing innovation manager with a background in economics and business administration. Currently I work at a startup to Bring Light to Life.</p>
+							<p>Hello, welcome to my portfolio.<br>I am an innovation manager with a background in economics and business administration. I am co-founder of a startup to Bring Light to Life.</p>
 						<p><a href="resume.html" class="btn btn-primary btn-outline">My resume and skills</a></p>
 						<ul class="fh5co-social-icons">
 							<li><a href="https://www.linkedin.com/in/jillekuipers"><i class="icon-linkedin"></i></a></li>
