--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Jille Kuipers | portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Jille Kuipers | portfolio" />
-	<meta name="keywords" content="Jille Kuipers, End-user innovator" />
+	<meta name="keywords" content="Jille Kuipers, End-user products" />
 	<meta name="author" content="Jille Kuipers" />
 
   	<!-- Facebook and Twitter integration -->
@@ -90,12 +90,12 @@
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
 				<div class="author">
-					<div class="author-inner animate-box" style="background-image: url(images/jillekuipers.jpg);">
+					<div class="author-inner animate-box" style="background-image: url(images/jille.png);">
 					</div>
 					<div class="desc animate-box">
 						<span></span>
-							<p>Hello, welcome to my portfolio.<br>I am an innovation manager with a background in economics and business administration. I am co-founder of a startup to Bring Light to Life.</p>
-						<p><a href="resume.html" class="btn btn-primary btn-outline">My resume and skills</a></p>
+							<p>Hi, I'm Jille. Welcome to my portfolio.<br>I'm a experienced Product/Research manager, leading engineers, designers and scientists to make something that people want. I am co-founder of a startup to Bring Light to Life.</p>
+						<p><a href="resume.html" class="btn btn-primary btn-outline">View resume</a></p>
 						<ul class="fh5co-social-icons">
 							<li><a href="https://www.linkedin.com/in/jillekuipers"><i class="icon-linkedin"></i></a></li>
 							<li><a href="mailto:hello@jillekuipers.com"><i class="icon-mail"></i></a></li>
@@ -112,6 +112,46 @@
 
 	<div id="fh5co-work">
 		<div class="container">
+				<div class="col-md-4 text-center animate-box">
+					<a class="work" href="https://www.hortidaily.com/article/9223697/growing-strawberries-indoors-in-vietnam/">
+						<div class="work-grid" style="background-image:url(images/farm.png);">
+							<div class="inner">
+								<div class="desc">
+								<h3>Feed the world</h3>
+								<span class="cat">Plant-centric lighting</span>
+							</div>
+							</div>
+						</div>
+					</a>
+				</div>
+
+				<div class="col-md-4 text-center animate-box">
+					<a class="work" href="https://iflextube.com/projects.html">
+						<div class="work-grid" style="background-image:url(images/hotel.png);">
+							<div class="inner">
+								<div class="desc">
+								<h3>Feel welcome</h3>
+								<span class="cat">Hotel lighting</span>
+							</div>
+							</div>
+						</div>
+					</a>
+				</div>
+
+				<div class="col-md-4 text-center animate-box">
+					<a class="work" href="https://socialcontactjournal.com/">
+						<div class="work-grid" style="background-image:url(images/project--1.jpg);">
+							<div class="inner">
+								<div class="desc">
+								<h3>Stay in touch</h3>
+								<span class="cat">Personal CRM</span>
+							</div>
+							</div>
+						</div>
+					</a>
+				</div>
+
+
 				<div class="col-md-4 text-center animate-box">
 					<a class="work" href="total_brand_experience.html">
 						<div class="work-grid" style="background-image:url(images/project-1.jpg);">
@@ -548,8 +588,8 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Market Driven Innovation</h2>
-					<p>As a Marketing Innovation manager I have gained substantial experience managing and leading new products and service development. If you would like to know more about my portfolio you may contact me.
+					<h2>End-user product development</h2>
+					<p>If you would like to collaborate, please feel free to reach out.
 						</p>
 					<p><a href="contact.html" class="btn btn-primary">contact Jille</a></p>
 				</div>
